<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/titleLabelTextView"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/label_title" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_column="1"
        android:layout_row="0"
        />

    <TextView
        android:id="@+id/yearLabelTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/label_year"
        />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_column="1"
        android:layout_row="1"
         />

    <TextView
        android:id="@+id/directorLabelTextView"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/label_director"
        />

    <TextView
        android:id="@+id/directorTextView"
        android:layout_column="1"
        android:layout_row="2"
        />
    
     <TextView
        android:id="@+id/runtimeLabelTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/label_runtime"
        />

    <TextView
        android:id="@+id/runtimeTextView"
        android:layout_column="1"
        android:layout_row="3"
        />
    
    
</GridLayout>

</ScrollView>
